force-app/main/default/objects/Case/fields/AI_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>AI_Issue_Type__c</fullName>
    <label>AI Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>