force-app/main/default/objects/Case/fields/AI_Response_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>AI_Response_Suggestion__c</fullName>
    <description>A field for the Agentforce to create a suggested response for the case</description>
    <label>AI Response Suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>