force-app/main/default/objects/Case/fields/AI_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>AI_Sentiment__c</fullName>
    <description>Field used by the Agentforce to classify the customer sentiment based on his initial messages</description>
    <label>AI Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Frustrated</fullName>
            </value>
            <value>
                <fullName>Angry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>