force-app/main/default/objects/Case/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description>Field used for the Agentforce to create a complete summary of the case</description>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>