force-app/main/default/objects/Case/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that classifies the Churn Risk of the case (used by the Agentforce)</description>
    <label>Churn Risk</label>
    <type>Checkbox</type>
</CustomField>