force-app/main/default/objects/Case/fields/SLA_Risk__c.field-meta.xml
<CustomField>
    <fullName>SLA_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Classification of the SLA (Service Level Agreement) risk of the case (used by the Agentforce)</description>
    <label>SLA Risk</label>
    <type>Checkbox</type>
</CustomField>